--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     repositories {
         gradlePluginPortal()
         google()
-        mavenCentral()
+        // mavenCentral()
+        jcenter()
         maven { url "https://mvnrepository.com/artifact" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
@@ -19,7 +20,8 @@ allprojects {
     repositories {
         gradlePluginPortal()
         google()
-        mavenCentral()
+        // mavenCentral()
+        jcenter()
         maven { url "https://mvnrepository.com/artifact" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
