--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         google()
         // mavenCentral()
         jcenter()
-        maven { url "https://mvnrepository.com" }
+        maven { url "https://mvnrepository.com/artifact/" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
     dependencies {
@@ -22,7 +22,7 @@ allprojects {
         google()
         // mavenCentral()
         jcenter()
-        maven { url "https://mvnrepository.com" }
+        maven { url "https://mvnrepository.com/artifact/" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
 }
