--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ buildscript {
     repositories {
         gradlePluginPortal()
         google()
-        // mavenCentral()
-        jcenter()
-        maven { url "https://mvnrepository.com/artifact/" }
+        mavenCentral()
+        // jcenter()
+        maven { url 'https://mvnrepository.com/artifact/' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
     dependencies {
@@ -20,9 +20,9 @@ allprojects {
     repositories {
         gradlePluginPortal()
         google()
-        // mavenCentral()
-        jcenter()
-        maven { url "https://mvnrepository.com/artifact/" }
+        mavenCentral()
+        // jcenter()
+        maven { url 'https://mvnrepository.com/artifact/' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
 }
