--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ buildscript {
     repositories {
         gradlePluginPortal()
         google()
+        mavenLocal()
         mavenCentral()
         // jcenter()
-        maven { url 'https://mvnrepository.com/artifact/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
     dependencies {
@@ -20,9 +21,10 @@ allprojects {
     repositories {
         gradlePluginPortal()
         google()
+        mavenLocal()
         mavenCentral()
         // jcenter()
-        maven { url 'https://mvnrepository.com/artifact/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
 }
