--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,9 @@ buildscript {
     repositories {
         gradlePluginPortal()
         google()
-        mavenLocal()
         mavenCentral()
         // jcenter()
-        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
     dependencies {
@@ -21,10 +20,9 @@ allprojects {
     repositories {
         gradlePluginPortal()
         google()
-        mavenLocal()
         mavenCentral()
         // jcenter()
-        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
     }
 }
