--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ buildscript {
         mavenCentral()
         // jcenter()
         maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url "https://repo.huaweicloud.com/repository/maven/" }
+        maven { url "https://maven.aliyun.com/repository/public/" }
+        maven { url "https://jitpack.io" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
+        maven { url "https://maven.aliyun.com/repository/releases" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
@@ -23,7 +27,11 @@ allprojects {
         mavenCentral()
         // jcenter()
         maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url "https://repo.huaweicloud.com/repository/maven/" }
+        maven { url "https://maven.aliyun.com/repository/public/" }
+        maven { url "https://jitpack.io" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
+        maven { url "https://maven.aliyun.com/repository/releases" }
     }
 }
 
