--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ buildscript {
         mavenCentral()
         // jcenter()
         maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter/' }
+        maven { url 'https://maven.aliyun.com/repository/central/' }
         maven { url "https://repo.huaweicloud.com/repository/maven/" }
-        maven { url "https://maven.aliyun.com/repository/public/" }
         maven { url "https://jitpack.io" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
         maven { url "https://maven.aliyun.com/repository/releases" }
@@ -27,8 +29,10 @@ allprojects {
         mavenCentral()
         // jcenter()
         maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter/' }
+        maven { url 'https://maven.aliyun.com/repository/central/' }
         maven { url "https://repo.huaweicloud.com/repository/maven/" }
-        maven { url "https://maven.aliyun.com/repository/public/" }
         maven { url "https://jitpack.io" }
         maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
         maven { url "https://maven.aliyun.com/repository/releases" }
